# NTU-JPEG-Decoder

./: .gitignore  CMakeLists.txt  README.md  convert_images.sh
include/: BitReader.h  FrameParameter.h  HuffmanTable.h  JPEGDecoder.h  JPEGMarker.h  JPEGParser.h  MCUDecoder.h  QuantizationTable.h  ScanParameter.h
src/: BitReader.cpp  FrameParameter.cpp  HuffmanTable.cpp  JPEGDecoder.cpp  JPEGParser.cpp  MCUDecoder.cpp  QuantizationTable.cpp  ScanParameter.cpp  main.cpp
